[gd_scene load_steps=2 format=3 uid="uid://7fr12ntjmxy4"]

[ext_resource type="Script" path="res://non_session/lobby.gd" id="1_60ws0"]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( "1_60ws0" )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -177.5
offset_right = 126.0
offset_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
offset_left = 61.0
offset_top = 34.5
offset_right = 202.0
offset_bottom = 60.5
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="List" type="ItemList" parent="Players"]
offset_left = 28.0
offset_top = 73.0
offset_right = 232.0
offset_bottom = 200.0
size_flags_horizontal = 2
size_flags_vertical = 2
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Label2" type="Label" parent="Players"]
offset_left = 76.0
offset_top = 214.5
offset_right = 217.0
offset_bottom = 240.5
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Select a map"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Map" type="OptionButton" parent="Players"]
offset_left = 11.0
offset_top = 253.0
offset_right = 249.0
offset_bottom = 285.0
scale = Vector2(0.963865, 1.09091)
item_count = 2
popup/item_0/text = "a"
popup/item_0/id = 0
popup/item_1/text = "b"
popup/item_1/id = 1
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Start" type="Button" parent="Players"]
offset_left = 68.0
offset_top = 307.0
offset_right = 193.0
offset_bottom = 338.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="PortForward" type="Label" parent="Players"]
offset_left = -124.0
offset_top = 375.0
offset_right = 179.0
offset_bottom = 462.0
theme_override_constants/line_spacing = 6
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."

[node name="FindPublicIP" type="LinkButton" parent="Players"]
offset_left = 168.0
offset_top = 393.5
offset_right = 376.0
offset_bottom = 416.5
text = "Find your public IP address"

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -83.5
offset_right = 138.5
offset_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
offset_left = 14.0
offset_top = 11.0
offset_right = 56.0
offset_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
offset_left = 17.0
offset_top = 30.0
offset_right = 173.0
offset_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="IPLabel" type="Label" parent="Connect"]
offset_left = 15.0
offset_top = 66.0
offset_right = 57.0
offset_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
offset_left = 17.0
offset_top = 85.0
offset_right = 173.0
offset_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
offset_left = 181.0
offset_top = 31.0
offset_right = 246.0
offset_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
offset_left = 181.0
offset_top = 87.0
offset_right = 246.0
offset_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
offset_left = 15.0
offset_top = 125.0
offset_right = 257.0
offset_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="item_selected" from="Players/Map" to="." method="_on_map_item_selected"]
[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Players/FindPublicIP" to="." method="_on_find_public_ip_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
